--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -24,7 +24,6 @@ Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of w
 
 Upper Knight and Bute Inlet CUs are both associated with long fjords that run from the Broughton Archipelago through the Coast Mountains. They include rivers with headwaters in the Cariboo region farther inland than other CUs in the SMU (Figure \@ref(fig:chum-map)). Southern Coastal Streams, Georgia Strait, and Howe Sound-Burrard Inlet also include portions of the Coast Mountains and some glaciers, but to a lesser extent and their inlets are shorter and their watersheds do not go as far inland. Upper Knight and Bute Inlet are unique in that they are the only CUs in the SMU that only include watersheds that drain into the upper end of long inlets. They are both more remote than the other CUs, which is partly why there are fewer observations over time for Chum with fall run timing.
 
-<!-- SG: Paragraph should be cut into separate ones, too long for a reader.-->
 Chum from the Upper Knight and Bute Inlet CUs are exposed to different threats to habitat, survival and productivity than the other five CUs in both the fresh water and the early marine phase. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. In the Bute Inlet CU, the glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in near shore marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. 
 
 Environmental drivers, biological characteristics, and population capacity for Upper Knight and Bute Inlet CUs also differ from the other seven CUs. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. The two largest watersheds in these CUs (Homathko and Klinaklini) fall within their own Freshwater Adaptize Zone, which indicates unique freshwater habitat conditions (Figure 76 and Table 52 in @holtbyConservationUnitsPacific2007). These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Competition with other salmon in the ocean and ocean conditions affect chum salmon in this SMU [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a], although declines in Pink salmon stocks in this general area may suggest that these factors are not affecting these CUs only. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and years with very low productivity. These CUs also have lower habitat capacity, with fewer streams with fall timed Chum spawners than the other CUs (Table \@ref(tab:CU-summary)). Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. 
@@ -65,10 +64,11 @@ We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updat
 
 For this case study, we consider two approaches for characterizing CU status: 
 (1) Pacific Salmon Scanner Tool (or Salmon Scanner) and 
-(2) CU-level abundance relative to a percentile lower benchmark. <!--SG: This could also come from the scanner, if you have a BM, you put that into the tool and estimate this separately.-->
+(2) CU-level abundance relative to a percentile lower benchmark. <!--SG: This could also come from the scanner, if you have a BM, you put that into the tool and estimate this separately.
+LW: The Scanner as we used it also has the absolute benchmark of 1500 / 10,000 fish. Although the percentile status can be calculated within the Salmon Scanner, the point in the paper is to compare the scanner with a simpler approach that won't be new for people. The Scanner uses additional metrics/benchmarks (e.g., absolute spawners against 1500/10,000), and this comparison of percentile approach vs Scanner shows how sensitive LRPs and assessments against LRP are to the additional metrics in the Scanner. -->
 
 
-The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way.-->
+The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way. LW: See above comment. -->
 
 
 When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as both upper and lower benchmarks when they were available for a CU. For CUs in which percentile benchmarks were not appropriate, the Salmon Scanner tool used trends in spawner abundance as a basis for assessing CU status (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend at least partially on percentile-based benchmarks.
@@ -111,7 +111,7 @@ The methods for applying the Salmon Scanner to get CU status is described in Sec
 We looked at the proportion of CUs that had status estimates above the red zone (or, above the lower percentile benchmark) to determine in which years between 1960 and 2018 the LRP would have been breached. As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the red zone for the ISC Chum SMU to be classified as being above the LRP. 
 
 
-The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. <!--SG: Again, they are the same…Scanner can use percentiles as BM -->To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). 
+The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. <!--SG: Again, they are the same…Scanner can use percentiles as BM. LW: see above comment -->To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). 
 
 
 When describing ISC Chum LRP scenarios in Table \@ref(tab:LRP-scenarios) and throughout this case study, we use the following labelling convention: *Metric : CU Status Method : Data Scenario*. 'Metric' refers to the choice to base all ISC Chum LRPs on the proportion of CUs above red CU status (Prop). The 'CU Status Method' can be based on the Pacific Salmon Status Scanner (Scanner) or on a single percentile benchmark used to characterize CU status (Percentile).  Finally, 'Data Scenario' labels indicate both the number of CUs represented (4, 5, or 7) and the completeness of the time series (Full or Partial). 'Full' scenarios only included CUs with complete time series (no CUs with missing years). 'Partial' scenarios included CUs with incomplete time series (years that did not have observations in those CUs were omitted). When using percentile benchmarks in these scenarios, we used percentiles based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 
