--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -21,7 +21,18 @@ WSP assessments are typically intensive expert-driven processes and have only be
 
 When developing aggregate abundance-based LRP options for Pacific salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above Red status. We use two methods to identify these levels: (i) logistic regression-based LRPs and (ii) projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review).
 
-We also maintain consistency with the WSP by only including populations without significant enhancement when evaluating CU and SMU status. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 and < 0.72 indicating integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Populations where production is dominated by hatchery-origin fish (PNI values < 0.5) are excluded from analyses. In addition, for systems where time-series of the proportion of hatchery marked fish on the spawning grounds are available, these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
+<!--Carrie: can you please review the following two paragraphs to make sure you agree with my revisions.  
+
+Also - I have not yet reponded to this comment from Chuck:
+"what happens with sites where pni cannot be measured because data are not collected or insufficient.  E.g. is sufficient to collect a brood stock sample of 40 fish at the same time and location where the broodstock have been collected for the last 40 years and assume that is a random sample for the population.  ?  we often see different mark rates in the brood stock samples compared to the river spawners.  We also know that the hatchery programs seldom collect a random sample, as many hatchery staff pick big females and avoid collecting jack males."
+
+
+
+-->
+
+We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5. Spawning streams with PNI estimated or assumed to be < 0.5 were excluded from analyses.
+
+Systems with levels of PNI > 0.5 can have hatchery influences; however, dynamics are predominately natural origin. PNI values $\geqslant$ 0.5 and < 0.72 indicate integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicate integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018]. Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
 
 
 ## PROPORTION-BASED LRPS
@@ -56,7 +67,7 @@ The Salmon Scanner uses the most recent generational mean spawner abundance (cal
 
 ## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
 
-Aggregate abundance-based LRPs are based on the SMU-level abundance at which there is a desired probability that 100% of CUs (the same proportion that was used for proportion-based LRPs) will be above a single benchmark that has been selected to represent CU status. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for status above the Red zone. The Salmon Scanner tool was considered in preliminary analyses as a way to identify Red status for aggregate abundance-based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a desired probability that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+Aggregate abundance-based LRPs are based on the SMU-level abundance at which there is a desired probability that 100% of CUs (the same proportion that was used for proportion-based LRPs) will be above a single benchmark that has been selected to represent CU status. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for status above the Red zone. The Salmon Scanner tool was considered in preliminary analyses as a way to identify Red status for aggregate abundance-based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a desired probability that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their lowe benchmarks (LBMs) as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
  
 We consider two types of aggregate abundance-based LRPs in our case studies: logistic regression-based LRPs and projection-based LRPs. Logistic regression LRPs are estimated using historical data, representing conditions that have been previously experienced by a SMU and thus implicitly assume the past is a reasonable approximation of the future. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, thus allowing uncertainty in future processes to be accounted for through alternative scenarios. Projection-based LRPs have the potential to overcome one key short-coming of the logistic regression-based LRP; they do not require the assumption that historic conditions represent current (or future) conditions as is required for the logistic regression-based approach. Instead, users have the ability to specify model structure and parameter estimates, as well as their uncertainties, that reflect the best-available science on current (or future) dynamics, to the extent that this information is available.
 
@@ -67,7 +78,7 @@ Thus projection-based LRPs overcome one key short-coming of the logistic regress
 
 <!-- LW: I suppose projections using parameters based on historical data still assume that past conditions will continue, e.g., assume productivity won't crash in 5 years)-->
 
-Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the multidimensional approach used by the Salmon Scanner. While in theory, estimates of CU status used in the aggregate abundance-based methods could be derived from the Salmon Scanner, we found little evidence of a statistical relationship between Salmon Scanner statuses for CUs and aggregate spawner abundances for the one case study where we considered this approach, Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., S\textsubscript{gen}) rather than the Salmon Scanner to develop aggregate abundance-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
+Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the multidimensional approach used by the Salmon Scanner. While in theory, estimates of CU status used in the aggregate abundance-based methods could be derived from the Salmon Scanner, we found little evidence of a statistical relationship between Salmon Scanner statuses for CUs and aggregate spawner abundances for the one case study where we considered this approach, Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Salmon Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., S~gen~) rather than the Salmon Scanner to develop aggregate abundance-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
 
 
 In addition, we characterize annual CU status using unsmoothed annual spawner abundances instead of generational averages when estimating aggregate abundance-based LRPs. This approach is based on preliminary analyses of the logistic regression-based method that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used unsmoothed annual spawner abundances within the estimation routines for aggregate abundance-based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce uncertainty in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual variability in status related to cyclic recruitment dynamics within a generation.
@@ -80,7 +91,7 @@ In addition, we characterize annual CU status using unsmoothed annual spawner ab
   CW: I believe we address his concerns by explaining why the multidimensional status tool would give different results in terms of logistic regression LRPs. 
 -->
 
-Logistic regression-based LRPs (also called logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above a selected lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their lower benchmark (LBM) and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to these outcomes to predict the probability that all CUs will have status > LBM as a function of aggregate SMU spawner abundance using the logistic regression equation:
+Logistic regression-based LRPs (also called logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above a selected lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their LBM and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to these outcomes to predict the probability that all CUs will have status > LBM as a function of aggregate SMU spawner abundance using the logistic regression equation:
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
@@ -183,7 +194,7 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION-BASED LRPS{#projectedMethods}
 
-The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward under current exploitation rates. Natural variability in recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to <!--KH suggested deletion: remove the impacts of initial conditions and --> identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. <!--CH: Can we describe various ERS as a sensitivity analyses subsequently?--> Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S\textsubscript{gen}).  This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Salmon Scanner tool to develop LRPs using projections.
+The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward under current exploitation rates. Natural variability in recruitment and ages-at-maturity are incorporated into forward projections, as is implementation uncertainty in exploitation rates. Projections are run for 30 years after an initialization period to <!--KH suggested deletion: remove the impacts of initial conditions and --> identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. <!--CH: Can we describe various ERS as a sensitivity analyses subsequently?--> Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g., S~gen~).  This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect a lack of biological and/or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Salmon Scanner tool to develop LRPs using projections.
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix \@ref(app:samsim-appendix), and model code is available on GitHub (see Appendix \@ref(app:github-appendix) for link to code).  
 
